syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service BikeServiceGrpc {
  rpc GetManagerEmails(GetManagersByAccountEmailRequest) returns (GetManagersByAccountEmailResponse);
  rpc GetDirectors(google.protobuf.Empty) returns (GetManagersByAccountEmailResponse);
}

message GetBikeStationNameByIdResponse{
  string name = 1;
}

message GetManagersByAccountEmailRequest{
  string accountPhone = 1;
}

message GetManagersByAccountEmailResponse{
  repeated ManagerCall managers = 1;
}

message ManagerCall {
  string email = 1;
  google.protobuf.Timestamp createdOn = 2;
}
